--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
   width: fit-content;
   /* height: 100vh; */
   padding: 0;
-  margin: 0;
+  margin: auto;
   background-color: rgba(200, 200, 34, 0.082);
   display: inline-block;
+  font-family: "Poppins", sans-serif;
   /* flex-wrap: wrap;
   justify-content: center;
   align-items: center; */
@@ -16,6 +17,7 @@
   height: 300px;
   border-radius: 7px;
   margin: 20px;
+  padding: 2%;
 }
 
 .header {
@@ -32,7 +34,6 @@
   margin: 10px 10px 10px 5px;
 }
 .imgcover {
-  padding: 2%;
   height: 15%;
   margin: 6px;
 }
@@ -47,4 +48,10 @@
 }
 .acc {
   width: 70%;
+}
+.tit {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  height: 15%;
 }
