--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
   margin: auto;
   background-color: rgba(200, 200, 34, 0.082);
   display: inline-block;
+  justify-content: space-evenly;
   font-family: "Poppins", sans-serif;
+
   /* flex-wrap: wrap;
   justify-content: center;
   align-items: center; */
@@ -18,6 +20,10 @@
   border-radius: 7px;
   margin: 20px;
   padding: 2%;
+}
+.child:hover {
+  background-color: black;
+  color: white;
 }
 
 .header {
