--- a/table3.css
+++ b/table3.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  gap: 20px;
 }
 .container {
   width: 100%;
@@ -9,7 +10,6 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  background-color: blueviolet;
 }
 .header {
   flex: 1;
@@ -33,13 +33,22 @@
 }
 .up {
   flex: 2;
-  /* background-color: gold; */
+  background-color: white;
   display: flex;
   flex-direction: row;
   gap: 20px;
 }
 .first {
+  flex: 1;
+  background-color: gold;
+}
+.second {
   flex: 2;
+  background-color: gold;
+}
+.third {
+  flex: 1;
+  background-color: gold;
 }
 .middle {
   flex: 2;
