--- a/cssfigma.css
+++ b/cssfigma.css
@@ -113,3 +113,39 @@
   width: 90%;
   padding: 0px;
 }
+.aboutUs {
+  width: 100%;
+  height: 826px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about {
+  width: 1152px;
+  height: 606px;
+
+  display: flex;
+  flex-direction: row;
+}
+.aboutLeft {
+  background-image: url(./interior.jpg);
+  background-size: cover;
+  flex: 1;
+  background-repeat: no-repeat;
+}
+.aboutRight {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+.rightUp {
+  flex: 1;
+}
+.rightBtm {
+  display: flex;
+  flex: 1;
+}
+.bottomRight {
+  flex: 1;
+  color: red;
+}
