--- a/cssfigma.css
+++ b/cssfigma.css
@@ -3,6 +3,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  font-weight: normal;
 }
 .container {
   width: 100%;
@@ -14,27 +15,27 @@
   display: flex;
   width: 100%;
   height: 130px;
-  align-items: center;
+  /* align-items: center;
   justify-content: space-around;
-  padding: 2%;
   font-weight: 300;
-}
-.navbar {
-  flex: 1;
+  /* flex: 1; */
+  /* gap: 40px; */
   display: flex;
-  gap: 40px;
+  padding: 2%;
+  /* background-color: #8ad1e2; */
 }
 .logo {
+  flex: 1;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 30px;
 }
 .menu {
   display: flex;
   flex: 4;
   flex-direction: row;
   align-items: center;
+  padding: 0 4%;
   justify-content: space-around;
 }
 .login {
