--- a/cssfigma.css
+++ b/cssfigma.css
@@ -38,9 +38,7 @@
   padding: 0 4%;
   justify-content: space-around;
 }
-.login {
-  flex: 1;
-}
+
 .genericButton {
   width: 96px;
   height: 40px;
@@ -122,7 +120,7 @@
   align-items: center;
 }
 .about {
-  width: 1152px;
+  width: 80%;
   height: 606px;
 
   display: flex;
@@ -133,14 +131,26 @@
   background-size: cover;
   flex: 1;
   background-repeat: no-repeat;
+  position: relative;
+}
+.leftMini {
+  position: absolute;
+  background-image: url(./smalljp.jpg);
+  background-size: cover;
+  width: 240px;
+  height: 160px;
+  top: 80%;
+  left: 65%;
 }
 .aboutRight {
   flex: 1;
+  padding: 1% 5%;
   display: flex;
   flex-direction: column;
 }
 .rightUp {
   flex: 1;
+  flex-wrap: wrap;
 }
 .rightBtm {
   display: flex;
