--- a/cssfigma.css
+++ b/cssfigma.css
@@ -168,6 +168,7 @@
   flex-direction: column;
   gap: 10%;
 }
+
 #supportsvg {
   width: 56px;
   height: 56px;
@@ -175,4 +176,16 @@
 #spt {
   width: 56px;
   height: 56px;
+}
+.lookingFor {
+  width: 100%;
+  height: 800px;
+  background-color: #19bce433;
+  padding: 10% 10% 5% 10%;
+}
+.lookingforInfo {
+  width: 100%;
+  height: 520px;
+  margin-top: 3%;
+  background: #000;
 }
