--- a/cssfigma.css
+++ b/cssfigma.css
@@ -169,7 +169,7 @@
   gap: 10%;
 }
 
-#supportsvg {
+.supportsvg {
   width: 56px;
   height: 56px;
 }
@@ -180,12 +180,42 @@
 .lookingFor {
   width: 100%;
   height: 800px;
-  background-color: #19bce433;
+  background-color: #f8fdfe;
   padding: 10% 10% 5% 10%;
 }
 .lookingforInfo {
   width: 100%;
   height: 520px;
   margin-top: 3%;
+  /* background: #000; */
+  display: flex;
+  flex-direction: row;
+  gap: 5%;
+}
+.lookLeft {
+  flex: 1;
+  background-image: url(./R.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.lookRight {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.houseInfo {
+  width: 100%;
+  height: 118px;
+  background: #fff;
+  border: 0.5px solid #19bce4;
+  display: flex;
+  align-items: center;
+  padding: 3%;
+  gap: 3%;
+}
+.innerLooking {
+  width: 80%;
+  height: 85%;
   background: #000;
 }
