--- a/cssfigma.css
+++ b/cssfigma.css
@@ -225,6 +225,87 @@
 .popularPlaces {
   width: 100%;
   height: 684px;
-  padding: 10%;
+  padding: 8%;
   text-align: center;
+}
+.cities {
+  width: 100%;
+  height: 95%;
+  display: flex;
+  flex-direction: row;
+  padding: 3%;
+  gap: 2.5%;
+}
+.citiesLeft {
+  flex: 1;
+  padding: 10%;
+  background-image: url(./bangladesh.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+  gap: 10%;
+  position: relative;
+}
+.citiesRight {
+  flex: 5;
+
+  display: flex;
+  flex-direction: column;
+  gap: 5%;
+}
+.top {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  gap: 2.5%;
+}
+.btm {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  gap: 2.5%;
+}
+.ctyinfo {
+  width: 100%;
+  height: 100%;
+  flex: 1;
+}
+#japan {
+  background-image: url(./Japan.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+#malasia {
+  background-image: url(./Malasia.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+#london {
+  background-image: url(./London.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+#india {
+  background-image: url(./tajmahal.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+.blur {
+  /* Glassmorphism card effect */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 3%;
+  color: #fff;
+  margin-top: 30%;
+  margin-left: 40%;
+  position: absolute;
+  backdrop-filter: blur(7px) saturate(153%);
+  -webkit-backdrop-filter: blur(7px) saturate(153%);
+  background-color: rgba(143, 150, 160, 0.63);
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
 }
