--- a/cssfigma.css
+++ b/cssfigma.css
@@ -397,7 +397,7 @@
 }
 .footerTop {
   flex: 1;
-  background-color: bisque;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -443,9 +443,35 @@
 }
 .chld1 {
   flex: 2;
-  background: blue;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 1%;
+  line-height: 20px;
+  gap: 10%;
+  cursor: pointer;
+}
+
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#icon {
+  gap: 5%;
 }
 .chld2 {
   flex: 1;
-  background-color: burlywood;
+  padding: 1%;
+  display: flex;
+  flex-direction: column;
+  gap: 5%;
+}
+#lschd {
+  flex: 1.5;
+}
+#lschd a {
+  text-decoration: none;
+  color: #000000;
 }
